external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_head_ctor_3.exp
error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/matching/invalid_head_ctor_3.move:16:13
   │
16 │             l::a(_) => (),
   │             ^^^^ Unexpected module member. A module member identifier is not a valid variant

